<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">LTE GW/DEV</string>
    <string name="hello_world"></string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_lg_main">LGMainActivity</string>
    <string name="title_activity_setting">SettingActivity</string>
    <string name="title_activity_md">MDActivity</string>
    <string name="title_activity_zwave">ZWaveActivity</string>
    <string name="title_activity_light">LightActivity</string>
    <string name="title_activity_zig_bee">ZigBeeActivity</string>
    <string name="title_activity_plug_fragment">PlugFragment</string>
    <string name="title_activity_wall_fragment">WallFragment</string>
    <string name="title_activity_valve_fragment">ValveFragment</string>
    <string name="title_activity_door_fragement">DoorFragement</string>
    <string name="title_activity_zbplug_fragment">ZBPlugFragment</string>
    <string name="title_activity_zbswitch_fragment">ZBSwitchFragment</string>
    <string name="title_activity_zbmotion_fragment">ZBMotionFragment</string>
    <string name="title_activity_zbopen_fragment">ZBOpenFragment</string>
    <string name="title_main_1">LTE IoT Gateway</string>
    <string name="title_main_2">LTE IoT Device</string>
    <string name="title_main_3">국제공동과제</string>
    <string name="title_zwave">Z-Wave</string>
    <string name="title_zigbee">ZigBee</string>
    <string name="title_light">가로등/경광등</string>
    <string name="title_md">진단/DM</string>
    <string name="title_setting">설정</string>
    <string name="title_employee">직원정보입력</string>
    <string name="title_ble">BLE</string>
    <string name="title_alljoyn">AllJoyn</string>
    <string name="title_version">Ver.xxx</string>
    <string name="title_plug">On/Off Plug</string>
    <string name="title_fan_plug">Fan Plug</string>
    <string name="title_hum_plug">Humidifier</string>
    <string name="title_wall">Wall Switch</string>
    <string name="title_valve">Gas Lock</string>
    <string name="title_door">Door Senser</string>
    <string name="title_door_lock">Door Lock</string>
    <string name="title_pairing">Pairing</string>
    <string name="title_unpairing">Un Pairing</string>
    <string name="title_product_type_id">Product Type ID : </string>
    <string name="title_product_id">Product ID : </string>
    <string name="title_on">On</string>
    <string name="title_off">Off</string>
    <string name="title_open">Open</string>
    <string name="title_close">Close</string>
    <string name="title_lock">Lock</string>
    <string name="title_unlock">Unlock</string>
    <string name="title_zb_plug">Plug</string>
    <string name="title_zb_switch">Switch</string>
    <string name="title_zb_motion">Motion</string>
    <string name="title_zb_open">Open/Close</string>
    <string name="title_light_text_view">가로등 : </string>
    <string name="title_manufacture_id">Manufacture ID : </string>
    <string name="title_instance_id">instance ID : </string>
    <string name="title_status">Status : </string>
    <string name="title_light_on">가로등 On</string>
    <string name="title_light_off">가로등 Off</string>
    <string name="title_alert_on">경광등 On</string>
    <string name="title_alert_off">경광등 Off</string>
    <string name="title_light_alert_on">가로등/경광등 On</string>
    <string name="title_light_alert_off">가로등/경광등 Off</string>
    <string name="title_all_light_on">전체 가로등 On</string>
    <string name="title_all_light_off"> 전체 가로등 Off</string>
    <string name="title_all_alert_on">전체 경광등 On</string>
    <string name="title_all_alert_off">전체 경광등 Off</string>
    <string name="title_all_light_alert_on">전체 가로등/경광등 On</string>
    <string name="title_all_light_alert_off">전체 가로등/경광등 Off</string>
    <string name="title_gateway">Gateway</string>
    <string name="title_things">Things</string>
    <string name="title_wan_status">WAN 상태 : </string>
    <string name="title_mac">MAC 주소 : </string>
    <string name="title_dip">단말 IP : </string>
    <string name="title_pip">공인 IP : </string>
    <string name="title_fw_version">FW 버전 : </string>
    <string name="title_pairing_n">GW 접속 단말수 (페어링) : </string>
    <string name="title_zwave_status">Z-Wave NW 연결상태 : </string>
    <string name="title_ssid">SSID : </string>
    <string name="title_rssi">신호세기 (RSSI, dbm) : </string>
    <string name="title_running_time">동작시작 시간 : </string>
    <string name="title_session_status">플랫폼-GW간 세션 상태 : </string>
    <string name="title_latitude_longitude">위도 / 경도 : </string>
    <string name="title_sensor_status_1">상태 조회(1) : </string>
    <string name="title_sensor_status_2">상태 조회(2) : </string>
    <string name="title_sensor_status_3">상태 조회(3) : </string>
    <string name="title_sensor_status_4">상태 조회(4) : </string>
    <string name="title_battery">배터리 잔량 : </string>
    <string name="title_temp">온도 상태 : </string>
    <string name="title_server_ip">oneM2M 서버 IP : </string>
    <string name="title_server_port">oneM2M 서버 port : </string>
    <string name="title_server_cse">oneM2M 서버 CSEBase ID : </string>
    <string name="title_device_ae_id">단말 IN-AE ID : </string>
    <string name="title_server_group_id">oneM2M Group ID : </string>
    <string name="title_gateway_sn_id">LTE GW SN ID(BSN) : </string>
    <string name="title_device_sn_id">LTE Device MN-CSE ID : </string>
    <string name="title_save">저장</string>
    <string name="title_cancel">취소</string>
    <string name="title_activity_international_main">InternationalMainActivity</string>
    <string name="title_activity_employee_dialog">EmployeeDialog</string>
    <string name="title_employee_id">직원 ID : </string>
    <string name="title_employee_dept">직원 부서 : </string>
    <string name="title_employee_name">직원 이름 : </string>
    <string name="title_activity_international_all_joyn">InternationalAllJoynActivity</string>
    <string name="title_light_bulb">Light bulb 상태 : </string>
    <string name="title_activity_international_ble">InternationalBLEActivity</string>
    <string name="title_warning_on">위급상황 전파 (원격)</string>
    <string name="title_warning_off">위급상황 해제 (원격)</string>
    <string name="title_ble_light_on">가로등 켜기</string>
    <string name="title_ble_light_alert_on">가로등 및 경광등 켜기</string>
    <string name="title_ble_light_alert_off">가로등 및 경광등 끄기</string>
    <string name="title_transfer_start">전송시작</string>
    <string name="title_transfer_stop">전송중지</string>
    <string name="title_transfer_info">송신 정보 : </string>
    <string name="title_activity_international_zwave">InternationalZWaveActivity</string>
    <string name="title_activity_international_plug_fragment">InternationalPlugFragment</string>
    <string name="title_activity_international_door_fragment">InternationalDoorFragment</string>
    <string name="title_activity_international_multi_fragment">InternationalMultiFragment</string>
    <string name="title_activity_lgble">LGBLEActivity</string>
    <string name="title_c_temp">현재 온도(˚C) : </string>
    <string name="title_c_humidity">현재 습도(%) : </string>
    <string name="title_w_temp">희망 온도(˚C) : </string>
    <string name="title_w_humidity">희망 습도(%) : </string>
    <string name="title_multi_sensor">Multi Sensor</string>
    <string name="title_add">추가</string>
    <string name="title_remove">삭제</string>
    <string name="title_activity_lg101_main">LG101MainActivity</string>
    <string name="title_activity_lgzwave_door_lock_fragment">LGZwaveDoorLockFragment</string>
    <string name="title_activity_lg101_dm">LG101DMActivity</string>

</resources>