<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="${relativePackage}.${activityClass}" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/layer_bg"
        android:orientation="vertical"
        android:padding="5dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <Button
                android:id="@+id/btn_lg_ble_light_on"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_margin="10dp"
                android:background="@drawable/button2"
                android:text="@string/title_ble_light_on" />

            <Button
                android:id="@+id/btn_lg_ble_all_light_on"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_margin="10dp"
                android:background="@drawable/button2"
                android:text="@string/title_ble_light_alert_on" />

            <Button
                android:id="@+id/btn_lg_ble_all_light_off"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_margin="10dp"
                android:background="@drawable/button"
                android:text="@string/title_ble_light_alert_off" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone" >

            <TextView
                android:id="@+id/tv_lg_zwave_plug_instance_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_transfer_info"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/et_lg_ble_send_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:maxLength="20" >

            </EditText>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone" >

            <Button
                android:id="@+id/btn_lg_ble_send_start"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:text="@string/title_transfer_start" />

            <Button
                android:id="@+id/btn_lg_ble_send_stop"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="20dp"
                android:layout_weight="1"
                android:text="@string/title_transfer_stop" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
