<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="${relativePackage}.${activityClass}" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:orientation="vertical" >

        <Button
            android:id="@+id/btn_lg_101_ble"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_margin="20dp"
            android:background="@drawable/button"
            android:text="@string/title_ble" />

        <Button
            android:id="@+id/btn_lg_101_light"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_margin="20dp"
            android:background="@drawable/button"
            android:text="@string/title_light" />

        <Button
            android:id="@+id/btn_lg_101_dm"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_margin="20dp"
            android:background="@drawable/button"
            android:text="@string/title_md" />
    </LinearLayout>

</RelativeLayout>