<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="${relativePackage}.${activityClass}" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:orientation="horizontal"
                android:padding="5dp" >

                <Button
                    android:id="@+id/btn_lg_zwave_plug"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/button"
                    android:text="@string/title_plug" />

                <Button
                    android:id="@+id/btn_lg_zwave_wall_switch"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:layout_weight="1"
                    android:layout_margin="5dp"
                    android:background="@drawable/button"
                    android:text="@string/title_wall" />

                <Button
                    android:id="@+id/btn_lg_zwave_gas_valve"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:layout_weight="1"
                    android:layout_margin="5dp"
                    android:background="@drawable/button"
                    android:text="@string/title_valve" />

                <Button
                    android:id="@+id/btn_lg_zwave_door_sensor"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:layout_weight="1"
                    android:layout_margin="5dp"
                    android:background="@drawable/button"
                    android:text="@string/title_door" />

                <Button
                    android:id="@+id/btn_lg_zwave_door_lock"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:layout_weight="1"
                    android:layout_margin="5dp"
                    android:background="@drawable/button"
                    android:text="@string/title_door_lock" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:orientation="horizontal"
                android:padding="5dp" >

                <Button
                    android:id="@+id/btn_lg_zwave_pairing"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:layout_weight="1"
                    android:layout_margin="5dp"
                    android:background="@drawable/button2"
                    android:text="@string/title_pairing" />

                <Button
                    android:id="@+id/btn_lg_zwave_unpairing"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_margin="5dp"
                    android:background="@drawable/button2"
                    android:text="@string/title_unpairing" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/layer_bg"
                android:orientation="horizontal"
                android:padding="5dp" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical" >

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" >

                        <TextView
                            android:id="@+id/TextView04"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/title_manufacture_id"
                            android:textAppearance="?android:attr/textAppearanceMedium" />

                        <TextView
                            android:id="@+id/txt_lg_zwave_manufacture_id"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:textAppearance="?android:attr/textAppearanceMedium" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" >

                        <TextView
                            android:id="@+id/TextView05"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/title_product_type_id"
                            android:textAppearance="?android:attr/textAppearanceMedium" />

                        <TextView
                            android:id="@+id/txt_lg_zwave_product_type_id"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:textAppearance="?android:attr/textAppearanceMedium" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" >

                        <TextView
                            android:id="@+id/TextView06"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/title_product_id"
                            android:textAppearance="?android:attr/textAppearanceMedium" />

                        <TextView
                            android:id="@+id/txt_lg_zwave_product_id"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:textAppearance="?android:attr/textAppearanceMedium" />
                    </LinearLayout>
                </LinearLayout>

                <ImageView
                    android:id="@+id/zwave_image_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/iot_plug" />
            </LinearLayout>

            <FrameLayout
                android:id="@+id/fragment_lg_zw"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >
            </FrameLayout>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>